Изменения и добавление model sat